--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Lebenslauf</h2>
                 <h3 class="section-subheading text-muted">Hier ist mein Lebenslauf zu finden.</h3>
+                <h3 class="section-subheading text-muted">Klicken Sie auf die Bilder.</h3>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mb-4">
