--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
 
                 </div>
-                <p style="text-align: center" class="text-muted"><a href="assets/Lebenslauf.pdf">Lebenslauf als PDF</a>
+                <p style="text-align: center" class="text-muted"><a href="assets/Lebenslauf Pascal Eglauf.pdf">Lebenslauf als PDF</a>
                 </p>
             </div>
     </section>
